<resources>
    <string name="app_name">Foody Moody</string>
    <string name="txt_main_page">Food lover? Welcome!</string>
    <string name="txt_main_page_1">Food lover?</string>
    <string name="txt_main_page_2">Welcome!</string>
    <string name="password">Password</string>
    <string name="username">E-mail</string>
    <string name="login">LOGIN</string>
    <string name="google">oogle</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">acebook</string>
    <string name="facebook_application_id" translatable="false">716202202622945</string>
    <string name="retrieving">FORGOT PASSWORD?</string>
    <string name="signup">SIGN UP</string>
    <string name="signUpHeadingTextView">Food Moody Sign Up</string>
    <string name="userNameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="emailNameHint">E-mail</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="signUpButtonText">Sign Up</string>
    <string name="backToLogin">Back to Login</string>
    <string name="RetrievePassword">Retrieve Password</string>
    <string name="add">Add</string>
    <string name="logout">logout</string>
    <string name="format">Change format</string>
    <string name="back">back</string>
    <string name="click_to_add">Click to add</string>
    <string name="description">Add a description</string>
    <string name="Post">post</string>
    <string name="method">Pick a method</string>
    <string name="comment">Write a comment …</string>
    <string name="submit">submit</string>
    <string name="home">Home</string>
    <string name="personal">Personal</string>
    <string name="newComment">Enter new comment</string>
    <string name="update">update</string>
    <string name="username1">Username</string>
    <string name="fullName">Full name</string>
    <string name="birthday">Birthday</string>
    <string name="updateProfile">Update Profile</string>
    <string name="updateSecurity">Update security</string>
    <string name="about">About me</string>
    <string name="birthDate">Birth date</string>
    <string name="dash">---</string>
    <string name="follow_user_side">Follow</string>
    <string name="message_user_side">message</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="bioDialogueTitle">Edit Bio</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="birthDate_selecting">Select your birth date</string>
    <string name="birthDate_reset">Remove birth date</string>
    <string name="write">Write something …</string>
    <string name="ok">OK</string>
    <string name="search_action">Search</string>
    <string name="chat_enter_message">Enter Message</string>
    <string name="chat_send">Send</string>
    <string name="message">message</string>
    <string name="privateProfile">Private</string>
    <string name="FollowRequest">This user has requested to follow your account. Do you accept?</string>
    <string name="sweet">Sweet\'s</string>
    <string name="follow">Follow</string>
    <string name="please_enter_email_for_password_reset">Please enter email for Password Reset</string>
    <string name="tempTest">TempTest</string>
    <string name="notification_yes">Yes</string>
    <string name="notification_no">No</string>
    <string name="Notification">Notification</string>
    <string name="followListIsVisible">Follow List Visibility</string>
</resources>