<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile"
    android:gravity="center"
    android:padding="@dimen/d_30">

    <CheckBox
        android:id="@+id/checkBoxFollowListIsVisible"
        android:layout_width="@dimen/d_230"
        android:layout_height="@dimen/d_30"
        android:text="@string/followListIsVisible"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="@dimen/f_20"
        android:layout_marginTop="@dimen/d_20"/>

    <CheckBox
        android:id="@+id/checkBoxPrivate"
        android:layout_width="@dimen/d_230"
        android:layout_height="@dimen/d_30"
        android:text="@string/privateProfile"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="@dimen/f_20"
        android:layout_marginTop="@dimen/d_20"/>

    <Button
        android:id="@+id/Button_profile_security_update"
        android:layout_width="@dimen/d_100"
        android:layout_height="@dimen/d_40"
        android:layout_marginTop="@dimen/d_20"
        android:text="@string/update"
        android:background="@drawable/button_login"
        android:textColor="@color/yellow"
        android:textSize="@dimen/f_20"/>


</LinearLayout>